--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,5 +21,7 @@
 
 <div class="page__footer-copyright">
   &copy; {{ site.time | date: '%Y' }} Junkai Hou. All rights reserved.
+</div>
+<div class="page__footer-updated">
   Site last updated {{ "now" | date: '%Y-%m-%d' %}}
 </div>
